--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -106,7 +106,10 @@ fr:
   complete: Complété
   compliance_check_result:
     severities:
+      WARNING_txt: 
+      alert_txt: 
       error_txt: Erreur
+      valid_txt: 
       warning_txt: Alerte
   convert: Convertir
   convert_gtfs: Convertir en GTFS
@@ -174,6 +177,8 @@ fr:
       line: Ligne
     nonconforming_lines: Lignes non conformes
     total_results: 'Nombre de résultats :'
+    total_results_files: 'Nombre de fichiers traités :'
+    total_results_lines: 'Nombre de lignes traitées :'
     validation_ended_at: Validation terminée
   search: Search
   search_form:
@@ -448,6 +453,7 @@ fr:
       4-Timetable-1: Vérification de contraintes sur les attributs des calendiers
       4-VehicleJourney-1: Vérification de contraintes sur les attributs des courses
       4-VehicleJourney-2: Vérification des modes de transport des courses
+      detail_: 
       detail_1_gtfs_calendar_1: aucun jour d'application n'est activé
       detail_1_gtfs_calendar_2: la date de fin du calendrier est antérieur ou égale à la date début
       detail_1_gtfs_common_1: le fichier %{filename} est obligatoire
@@ -665,3 +671,4 @@ fr:
       detail_4_vehiclejourney_1_unique: L'attribut %{reference_value} de la course %{source_label} (%{source_objectid}) a une valeur partagée avec la course %{target_0_label} (%{target_0_objectid})
       detail_4_vehiclejourney_2: La course %{source_label} (%{source_objectid}) a un mode de transport interdit %{error_value}
   want_to_cancel_your_account: You want to cancel your account?
+  warning_count: warnings
