--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -103,6 +103,7 @@ fr:
       model_name: 
       records: 
     toggle_navigation: 
+  api: Job id.
   complete: Complété
   compliance_check_result:
     details:
@@ -489,6 +490,10 @@ fr:
       detail_4_vehiclejourney_1_unique: L'attribut %{reference_value} de la course %{source_label} (%{source_objectid}) a une valeur partagée avec la course %{target_0_label} (%{target_0_objectid})
       detail_4_vehiclejourney_2: La course %{source_label} (%{source_objectid}) a un mode de transport interdit %{error_value}
     severities:
+      ERROR_txt: ERROR
+      IGNORED_txt: IGNORED
+      OK_txt: OK
+      _txt: 
       error_txt: Erreur
       ignored_txt: Ignoré
       ok_txt: Ok
@@ -498,6 +503,7 @@ fr:
   convert_gtfs: Convertir en GTFS
   convert_neptune: Convertir au format Neptune
   convert_netex: Convertir au format NeTEx
+  convert_to: 
   converted: Conversion
   cvdtc: CVDTC
   devise:
@@ -508,7 +514,7 @@ fr:
       links:
         edit_account: Modifier mon compte
         sign_out: Déconnexion
-  error_count: erreurs
+  error_count: erreur(s)
   errors:
     connection_refused: Connexion refusé
   flash:
@@ -564,6 +570,12 @@ fr:
     total_results_files: 'Nombre de fichiers traités :'
     total_results_lines: 'Nombre de lignes traitées :'
     validation_ended_at: Validation terminée
+  report_results:
+    icons:
+      title:
+        ERROR_txt: Erreur
+        IGNORED_txt: Ignoré
+        OK_txt: Succès
   search_form:
     label:
       search: Rechercher
@@ -669,4 +681,4 @@ fr:
   validate: Valider
   validated: Validation
   want_to_cancel_your_account: You want to cancel your account?
-  warning_count: warnings
+  warning_count: alerte(s)
