--- a/locales/en.yml
+++ b/locales/en.yml
@@ -555,6 +555,7 @@ en:
         files: 
         lines: 
         tests: 
+        transport_datas: 
     status:
       pending: Pending
     tab:
@@ -576,11 +577,15 @@ en:
     default_view:
       files: Files
       lines: Lines
+      tests: Tests
+      transport_datas: Transport datas
     delete: Delete
     download: Download
     file:
       column: Column
       line: Line
+    ignored_files: Ignored files
+    ignored_tests: Ignored tests
     nonconforming_files: Nonconforming files
     nonconforming_lines: Nonconforming lines
     total_results: 'Total results:'
